--- a/data-source-app/requirements.txt
+++ b/data-source-app/requirements.txt
@@ -1,9 +1,14 @@
+# Core application dependencies
 psycopg[binary]>=3.1.0
 typer[all]>=0.9.0
 PyYAML>=6.0
 pandas>=2.0.0
 python-dotenv>=1.0.0
 cryptography>=41.0.0
+
+# Testing dependencies
 pytest>=7.0.0
 pytest-cov>=4.0.0
 
+# Frontend dependencies
+Flask>=2.3.0
